--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
   
   <a href="https://www.w3schools.com/" class="w3-bar-item w3-button">Dashboard</a>
   <ul>
-  <li><a href="#" class="w3-bar-item w3-button">Service Management</a></li>
-  <li><a href="#" class="w3-bar-item w3-button">JIRA</a></li>
-  <li><a href="#" class="w3-bar-item w3-button">Service Now</a>
-  <ul>
-  <li><a href="#" class="w3-bar-item w3-button">Change</a></li>
-  <li><a href="#" class="w3-bar-item w3-button">Probelm</a></li>
-  <li><a href="#" class="w3-bar-item w3-button">Incident</a></li>
+ <li><a href="#" class="w3-bar-item w3-button">Service Management</a></li>
+<li><a href="#" class="w3-bar-item w3-button">JIRA</a></li>
+<li><a href="#" class="w3-bar-item w3-button">Service Now</a>
+<li><a href="#" class="w3-bar-item w3-button">Change</a></li>
+<li><a href="#" class="w3-bar-item w3-button">Probelm</a></li>
+<li><a href="#" class="w3-bar-item w3-button">Incident</a></li>
+<li><a href="#" class="w3-bar-item w3-button">Change</a> 
+<li><a href="#" class="w3-bar-item w3-button">Upcoming Change</a></li>
+<li><a href="#" class="w3-bar-item w3-button">Approvals</a></li>
+<li><a href="#" class="w3-bar-item w3-button">RPA TOOLS</a> 
+<li><a href="#" class="w3-bar-item w3-button">UI Path</a> 
+<li><a href="#" class="w3-bar-item w3-button">Attended</a></li>
+<li><a href="#" class="w3-bar-item w3-button">UnAttended</a></li>
+<li><a href="#" class="w3-bar-item w3-button">REMS</a> 
+<li><a href="#" class="w3-bar-item w3-button">CONFIGURATOR</a></li>
+<li><a href="#" class="w3-bar-item w3-button">ACC</a></li> <li><a href="#" class="w3-bar-item w3-button">VDI Monitor</a>
+<li><a href="#" class="w3-bar-item w3-button">App ViewX</a>
+<li><a href="#" class="w3-bar-item w3-button">Server Inventory</a>
+<li> <a href="#" class="w3-bar-item w3-button">Growth Chart</a></li><li><a href="#" class="w3-bar-item w3-button">Settings</a></li>
 </ul>
-</li>
- <li> <a href="#" class="w3-bar-item w3-button">Growth Chart</a></li>
-  <li><a href="#" class="w3-bar-item w3-button">Settings</a></li>
-</ul>
+
   <button onclick="closeLeftMenu()" class="w3-bar-item w3-button w3-large">Close &times;</button>
 </div>
 
